--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,7 @@ use_frameworks!
 
 
 target 'Harrier_Tests', :exclusive => true do
-  pod "Harrier", :path => "../"
+  pod "HarrierQueue", :path => "~/My\ Pods/HarrierQueue"
 
   
 end
